MTU_Overlake_EastUS2_Lab/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.43.8.12551",
      "templateHash": "1862909532369606531"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure region for all resources. Keep this as eastus2 for this lab."
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Administrator username for both Linux VMs."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Administrator password for both Linux VMs."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D4s_v5",
      "metadata": {
        "description": "Virtual machine size. Keep an accelerated networking capable SKU."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "vnet-mtu-lab",
      "metadata": {
        "description": "Virtual network name."
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "subnet-lab",
      "metadata": {
        "description": "Subnet name."
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.235.0.0/16",
      "metadata": {
        "description": "Address space for the virtual network."
      }
    },
    "subnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.235.1.0/24",
      "metadata": {
        "description": "Address prefix for the subnet."
      }
    },
    "sourceVmName": {
      "type": "string",
      "defaultValue": "vm-mtu-src",
      "metadata": {
        "description": "Name of the source VM with public IP."
      }
    },
    "destinationVmName": {
      "type": "string",
      "defaultValue": "vm-mtu-dst",
      "metadata": {
        "description": "Name of the destination VM without public IP."
      }
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "nsg-mtu-lab",
      "metadata": {
        "description": "Name of the network security group."
      }
    },
    "sourceNicName": {
      "type": "string",
      "defaultValue": "nic-mtu-src",
      "metadata": {
        "description": "Name of the source network interface."
      }
    },
    "destinationNicName": {
      "type": "string",
      "defaultValue": "nic-mtu-dst",
      "metadata": {
        "description": "Name of the destination network interface."
      }
    },
    "sourcePublicIpName": {
      "type": "string",
      "defaultValue": "pip-mtu-src",
      "metadata": {
        "description": "Name of the source VM public IP."
      }
    }
  },
  "variables": {
    "ubuntuPublisher": "Canonical",
    "ubuntuOffer": "0001-com-ubuntu-server-jammy",
    "ubuntuSku": "22_04-lts-gen2",
    "ubuntuVersion": "latest"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ssh",
            "properties": {
              "priority": 100,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow SSH"
            }
          },
          {
            "name": "allow-icmp",
            "properties": {
              "priority": 110,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Icmp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow ICMP"
            }
          },
          {
            "name": "allow-iperf3",
            "properties": {
              "priority": 120,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5201",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow iperf3 TCP port 5201"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetAddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "[parameters('sourcePublicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "[parameters('sourceNicName')]",
      "location": "[parameters('location')]",
      "properties": {
        "enableAcceleratedNetworking": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName')), '2023-09-01').subnets[0].id]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('sourcePublicIpName'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('sourcePublicIpName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "[parameters('destinationNicName')]",
      "location": "[parameters('location')]",
      "properties": {
        "enableAcceleratedNetworking": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName')), '2023-09-01').subnets[0].id]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "[parameters('sourceVmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('sourceVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('ubuntuPublisher')]",
            "offer": "[variables('ubuntuOffer')]",
            "sku": "[variables('ubuntuSku')]",
            "version": "[variables('ubuntuVersion')]"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('sourceNicName'))]",
              "properties": {
                "primary": true
              }
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('sourceNicName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "[parameters('destinationVmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('destinationVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('ubuntuPublisher')]",
            "offer": "[variables('ubuntuOffer')]",
            "sku": "[variables('ubuntuSku')]",
            "version": "[variables('ubuntuVersion')]"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('destinationNicName'))]",
              "properties": {
                "primary": true
              }
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('destinationNicName'))]"
      ]
    }
  ],
  "outputs": {
    "sourceVmPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', parameters('sourcePublicIpName')), '2023-09-01').ipAddress]"
    },
    "sourceVmPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', parameters('sourceNicName')), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "destinationVmPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', parameters('destinationNicName')), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "sourceNicOutputName": {
      "type": "string",
      "value": "[parameters('sourceNicName')]"
    },
    "destinationNicOutputName": {
      "type": "string",
      "value": "[parameters('destinationNicName')]"
    }
  }
}
